name:                compile-and-run-c-files
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andreas Herrmann
maintainer:          andreas.herrmann@tweag.io
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable external-c-computation
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , containers
                     , funflow
                     , path
                     , path-io
                     , text
  default-language:    Haskell2010
